--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang='ja'>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quizapp</title>
-  <link rel="stylesheet" href="css.styles.css">
+  <meta charset='UTF-8'>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+  <title>非同期クイズアプリ</title>
+  <link rel='stylesheet' href='css.styles.css'>
 </head>
 <body>
-  <h1 id="title">ようこそ</h1>
-  <p id="category"></p>
-  <p id="difficulty"></p>
+  <h1 id='title'>ようこそ</h1>
+  <p id='category'></p>
+  <p id='difficulty'></p>
   <hr>
-  <p id="question">以下のボタンをクリック</p>
+  <p id='question'>以下のボタンをクリック</p>
   <hr>
-  <button id="startBtn">開始</button>
-  <button id="againBtn" class="hide">ホームに戻る</button>
-  <ul id="answer-btn" class="hide">
-    <li><button id="answer1" class="answer"></button></li>
-    <li><button id="answer2" class="answer"></button></li>
-    <li><button id="answer3" class="answer"></button></li>
-    <li><button id="answer4" class="answer"></button></li>
+  <button id='startBtn'>開始</button>
+  <button id='againBtn' class='hide'>ホームに戻る</button>
+  <ul id='answer-btn' class='hide'>
+    <li><button id='answer1' class='answer'></button></li>
+    <li><button id='answer2' class='answer'></button></li>
+    <li><button id='answer3' class='answer'></button></li>
+    <li><button id='answer4' class='answer'></button></li>
   </ul>
 
   
   
-  <script src="main.js"></script>
+  <script src='main.js'></script>
 </body>
 </html>
